<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIRTMCA</string>
    <string name="institute_name">Sagar Institute of Research Technology</string>
    <string name="action_settings">Settings</string>
    <string name="student_icon_alt">Studnet Icon</string>
    <!-- TextView -->
    <string name="nameTv">Name</string>
    <string name="emailTv">Email</string>
    <string name="passwordTv">Password</string>
    <string name="confirmPasswordTv">Confirm Password</string>
    <string name="signUpLink">Not Yet Account? Create One</string>
    <string name="loginLink">Already have a account? Login</string>

    <!-- EditText Hint -->
    <string name="namehintEd">Name</string>
    <string name="emailhintEd">Email</string>
    <string name="passwordhintEd">Password</string>
    <string name="confirmPasswordhintEd">Confirm Password</string>

    <!-- Button -->
    <string name="loginBtn">Login</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="createAccountBtn">Create New Acccount</string>
    <string name="id">ID</string>
    <string name="rollnumber">Roll Number</string>
    <string name="name">Name</string>
    <string name="fathername">Father name</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone Number</string>
    <string name="help">Help</string>
    <!-- LABELS DETAIL VIEW -->
    <string name="id_label">ID :</string>
    <string name="name_label">Full Name :</string>
    <string name="rollnumber_label">Roll Number :</string>
    <string name="fathername_label">Father Name :</string>
    <string name="phone_label">Phone :</string>
    <string name="email_label">E-mail :</string>
    <string name="menu_new_student">Add new Student</string>
    <string name="menu_settings">Settings</string>
    <string name="student_name">Student Details</string>
    <!-- REMOVE STUDENT -->
    <string name="removed_successfully"> has been removed successfully.</string>
    <string name="remove_student">Remove Student</string>
    <string name="remove">Remove</string>
    <string name="remove_confirm_message">Are you sure you want to remove </string>

    <!-- ADD STUDENT VIEW -->
    <string name="add_student">Add Student</string>
    <string name="cancel">Cancel</string>
    <string name="added_student">Added Student</string>
    <string name="added_student_msg">was added successfully.</string>
    <string name="not_added_student_msg">was not added successfully.</string>
    <string name="not_update_student_msg">was not updated successfully.</string>
    <string name="ok">OK</string>
    <string name="update_student">Update Student</string>
    <string name="call_student">Call</string>
    <string name="sms_student">SMS</string>
    <string name="email_student">Email</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="upated_successfully">Student has been updated successfully.</string>
    <string name="updated_fail">Updating process failed.</string>
    <string name="no_student">No Students Found</string>
    <string name="imageview_description">Student Thumbnail</string>
    <string name="no_student_selected">No Student Selected</string>

    <!-- ACTIVITY VIEW -->
    <string name="title_activity_login_sirtmca">LoginSIRT</string>
    <string name="title_activity_signup_sirtmca">SignupSIRT</string>
    <string name="title_activity_sirtmca">SIRT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_student_create">StudentCreate</string>
    <string name="title_activity_student_update">StudentUpdate</string>
    <string name="title_activity_student_details">StudentDetails</string>

</resources>
