<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mehroon"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vnetsoft.sirtmca.view.LoginSIRTMCA" >
        
     <LinearLayout
        android:id="@+id/llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <ImageView
            android:id="@+id/sgi_imageview"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/student_icon_alt"
            android:src="@drawable/sirt_logo" />

        <TextView
            android:id="@+id/emailTv"
            style="@style/tv_sirtmca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTv" />
        
        <LinearLayout
             android:id="@+id/llyt6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

         <EditText
             android:id="@+id/input_emailEd"
             style="@style/edittext_sirtmca"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_action_email"
             android:drawablePadding="5dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:drawableStart="@drawable/ic_action_email"
             android:hint="@string/emailhintEd"
             android:inputType="textEmailAddress" >

        </EditText>  
                
            </LinearLayout>



        <TextView
            android:id="@+id/passwordTv"
            style="@style/tv_sirtmca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordTv" />
        
      <LinearLayout
             android:id="@+id/llyt7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">

        <EditText
            android:id="@+id/input_passwordEd"
            style="@style/edittext_sirtmca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_private"
            android:drawablePadding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableStart="@drawable/ic_private"
            android:hint="@string/passwordhintEd"
            android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_sirtmca"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/loginBtn" />

    </LinearLayout>
      
        <LinearLayout
           android:id="@+id/llyt2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="10dp"
           android:layout_below="@id/llyt">

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signUpLink"
                android:textColor="@color/dark_red"
                android:textSize="16sp"
                android:textStyle="bold" />
        
        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:background="@drawable/textborder"
            android:padding="5dp"
            android:text="@string/createAccountBtn"
            android:textColor="@color/dark_red"
            android:textStyle="bold" />

        </LinearLayout>
        
</RelativeLayout>
