<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vnetsoft.sirtmca.view.StudentDetails" >

  <LinearLayout
        android:id="@+id/llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
   <TextView
		android:id="@+id/create_title_space"
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:background="@color/dark_red"
		android:textColor="@color/black" />
		    
  <TextView
		android:id="@+id/student_detail_nameTv"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/orange_logo"
		android:gravity="center"
		android:padding="5sp"
		android:text="@string/student_name"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textStyle="bold" />

	  <TextView
		    android:id="@+id/create_title_space2"
		    android:layout_width="match_parent"
		    android:layout_height="3dp"
		    android:layout_marginBottom="10sp"
		    android:background="@color/dark_red"
		    android:textColor="@color/black" />      
        
     </LinearLayout>

   <ScrollView 
    android:id="@+id/scrlview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_below="@id/llyt"
    android:padding="5dp" >
    
    <!--  GENERAL LAYOUT -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >
       
        <!-- STUDENT ICON -->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:weightSum="100">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@integer/contact_detail_photo_percent"
            android:contentDescription="@string/imageview_description"
            android:scaleType="centerCrop"
            android:src="@drawable/banner_student" />

        </LinearLayout>

        <!-- DETAILS LAYOUT -->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:paddingBottom="50dp"
          android:paddingTop="20dp" >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_id"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/id_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_id"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/id" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_rollnum"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/rollnumber_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_rollnum"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/rollnumber" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_name"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/name_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_name"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/name" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_fathername"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/fathername_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_fathername"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fathername" />
          </LinearLayout>
          
                    

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_email"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/email_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_email"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/email" />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="horizontal"
              android:paddingBottom="5dp"
              android:paddingTop="5dp" >

              <TextView
                  android:id="@+id/detail_label_phome"
                  android:layout_width="110dp"
                  android:layout_height="wrap_content"
                  android:paddingTop="2dp"
                  android:singleLine="true"
                  android:text="@string/phone_label"
                  android:textSize="14sp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/detail_phone"
                  style="@style/textview_studentdetail"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/phone" />
          </LinearLayout>
      </LinearLayout>

        <!-- DETAILS LAYOUT END -->

    </LinearLayout>

	<!--  GENERAL LAYOUT END -->
</ScrollView>

</RelativeLayout>
